# on-call

./: .gitignore  LICENSE  README.md  pyproject.toml
data/hm/: feats.sql  inferred_stypes.py  loader.py  test.csv  utils.py  val.csv
data/hm/csv/: test.csv  val.csv
diagrams/: flow.mermaid
instructions/: playbook.md
joblibs/: random_forest_bike_sharing.joblib  rel_hm_user_churn_lgbm_20k.joblib
saved_pipelines/: rel_hm_user_churn_lgbm_20k.joblib
src/: orchestrator.py
src/modules/: distribution_analyzer.py  eda.py  error_analyzer.py  explainable_ai.py  feature_analyzer.py  metric_analyzer.py
src/on_call/: __main__.py  constants.py  experiment.py  logger.py  model_pipeline.py  notebook_manager.py  orchestrator.py
src/on_call/backend/: api.py
src/on_call/data/hm/: loader.py
src/on_call/frontend/: package-lock.json  package.json
src/on_call/frontend/src/: App.jsx  StreamingComponent.jsx
src/on_call/model/: base_model.py  gbdt_model.py  lgbm_model.py  random_forest_regressor_model.py  xgb_model.py
src/on_call/modules/: __init__.py  base_analyzer.py  base_module.py  baseline_analyzer.py  cohort_identification.py  impact_window_analyzer.py  model_behavior_analyzer.py  placeholder.py  trend_analyzer.py
src/on_call/modules/conclusion/: __init__.py  methods.py  template.jinja  workflow.py
src/on_call/modules/imports/: __init__.py  (+2 more)
src/on_call/orchestrator/: __init__.py  base.py  models.py  types.py
src/on_call/scenarios/: credit_risk_model_decline.mermaid  ecommerce_ctr_drop.mermaid  flow_diagram.mmd  fraud_detection_false_positives.mermaid  image_classification_diversity_drop.mermaid  possible_scenarios.md  recommendation_diversity_drop.mermaid  scenario_generator.py
src/on_call/utils/: config_manager.py  metrics.py  model.py
src/on_call/workflow/: _examples.py  conditions.py  enums.py  models.py  setup.py
src/utils/: logger.py
tests/: test_notebook_manager.py
tests/on_call/: test_model_pipeline.py
tests/on_call/models/: test_xgb_model.py
tests/on_call/utils/: test_metrics.py
(+38 files in other folders)
