[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "on-call"
version = "0.1.0"
description = "Model debugger"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
license = "MIT"
authors = [
    { name = "RapidML", email = "founders@rapidml.xyz" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "grandalf>=0.8",
    "requests>=2.28.0",
    "langgraph>=0.2.66",
    "nbformat>=5.9.0",
    "pydantic>=1.10.0",
    "jupyter_client>=8.0.0",
    fastapi = ">=0.104.0"
    uvicorn = ">=0.24.0" 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pyproject-flake8==6.0.0",
]

[project.urls]
Homepage = "https://github.com/rapid-ml-xyz/on-call"
Repository = "https://github.com/rapid-ml-xyz/on-call.git"
"Bug Tracker" = "https://github.com/rapid-ml-xyz/on-call/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/on_call"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.coverage.run]
source = ["src/on_call"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.flake8]
max-line-length = 90
